--- a/.github/workflows/fetch-etf.yml
+++ b/.github/workflows/fetch-etf.yml
@@ -1,8 +1,8 @@
 name: Build + SEO
 
 on:
-  schedule:
-    - cron: '30 12 * * 1-5'  # Runs daily at 12:30 PM UTC (6:00 PM IST) exculding Sunday & Saturday
+  # schedule:
+  #   - cron: '30 12 * * 1-5'  # Runs daily at 12:30 PM UTC (6:00 PM IST) exculding Sunday & Saturday
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
